first final release for deployment